<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_addCart"
        android:background="@drawable/button_bg1"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_seleSize"
        android:background="@drawable/button_bg1"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_preOrder"
        android:background="@drawable/button_bg2"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_rush"
        android:background="@drawable/button_bg1"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_discount"
        android:background="@drawable/button_bg3"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_toSale"
        android:background="@drawable/button_bg4"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_soldoutStock"
        android:background="@drawable/button_bg4"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_preorderFinish"
        android:background="@drawable/button_bg4"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_soldout"
        android:background="@drawable/button_bg4"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_rushFinish"
        android:background="@drawable/button_bg4"/>
</LinearLayout>




