<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_addCart"
        android:background="@drawable/buttonl_bg1"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_seleSize"
        android:background="@drawable/buttonl_bg1"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_preOrder"
        android:background="@drawable/buttonl_bg2"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_rush"
        android:background="@drawable/buttonl_bg1"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_discount"
        android:background="@drawable/buttonl_bg3"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_toSale"
        android:background="@drawable/buttonl_bg4"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_soldoutStock"
        android:background="@drawable/buttonl_bg4"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_preorderFinish"
        android:background="@drawable/buttonl_bg4"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_soldout"
        android:background="@drawable/buttonl_bg4"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/item_info_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAppearance="@style/ut_body2"
        android:textColor="@color/buttonColor"
        android:text="@string/buytxt_rushFinish"
        android:background="@drawable/buttonl_bg4"
        android:layout_weight="2"/>

</LinearLayout>




